Use the request/response time not current Date.